examples/datalog/14_aggregations/38_global_stats.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_global_stats
Knowledge graph 'test_global_stats' created.
Switched to knowledge graph: test_global_stats
> .kg use test_global_stats
Switched to knowledge graph: test_global_stats
> +measurements[(1, 10.5), (2, 20.3), (3, 15.8), (4, 25.1), (5, 18.7)].
Inserted 5 fact(s) into 'measurements'.
> +global_sum(<SUM:V>) :- measurements(_, V).
Script error: Parse error: Invalid term: '<SUM:V>'
