examples/datalog/14_aggregations/38_global_stats.dl
% Test: Global statistics pattern
% Expected: Calculate stats across all data
% Category: 14_aggregations
% Priority: P2 - Aggregation patterns

.kg create test_global_stats
.kg use test_global_stats

+measurements[(1, 10.5), (2, 20.3), (3, 15.8), (4, 25.1), (5, 18.7)].

+global_sum(<SUM:V>) :- measurements(_, V).
+global_count(<COUNT:V>) :- measurements(_, V).
+global_min(<MIN:V>) :- measurements(_, V).
+global_max(<MAX:V>) :- measurements(_, V).
+global_avg(<AVG:V>) :- measurements(_, V).

?- global_sum(S).
?- global_count(C).
?- global_min(Min).
?- global_max(Max).
?- global_avg(Avg).

.kg use default
.kg drop test_global_stats
